# hatchify

./: .gitignore  LICENSE  README.md  README_ZH.md  main.py  pyproject.toml
app/business/db/: session.py
app/business/manager/: repository_manager.py  service_manager.py
app/business/models/: agent.py  graph.py  graph_version.py  messages.py  session.py
app/business/repositories/: agent_repository.py  graph_repository.py  graph_version_repository.py  message_repository.py  session_repository.py
app/business/services/: agent_service.py  graph_service.py  graph_version_service.py  message_service.py  session_service.py
app/business/utils/: pagination_utils.py
app/common/constants/: constants.py
app/common/event/: edit_event.py  execute_event.py  stream_event.py
app/common/extensions/: ext_storage.py
app/common/settings/: settings.py
app/core/builder/: dynamic_graph_builder.py  graph_executor.py  graph_wrapper.py
app/core/factory/: agent_factory.py  llm_factory.py  session_manager_factory.py  sql_engine_factory.py  tool_factory.py
app/launch/: launch.py
hatchify/launch/: launch.py
hatchify/utils/: json_schema_2_pydantic.py
resources/: development.yaml  example.mcp.toml  example.models.toml  example.tools.toml
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_ZH.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/docker/: nginx.conf
web/scripts/: build-locales-resource.ts  iframe-integration.js
web/src/: App.tsx  i18n.ts  main.tsx  router.ts
web/src/api/: execution.ts  (+5 more)
(+252 files in other folders)
